# modelcontextprotocol

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  MAINTAINERS.md  README.md  docs-release-matrix-2026-07-28.md  node_modules  package-lock.json  package.json  pnpm-lock.yaml  sep-client-id-metadata.md  typedoc.plugin.mjs  versioning.mdx
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
compliance/: package.json
compliance/python/: CLAUDE.md  pyproject.toml  test-client  test-server
compliance/python/src/: client.py  server.py
compliance/python/tests/: test_compliance.py
compliance/rust/: CLAUDE.md  Cargo.toml  test-scenario.sh
compliance/rust/src/: jsonrpc.rs  lib.rs
compliance/rust/src/client/: mod.rs
compliance/rust/src/servers/: mod.rs
docs/: clients.mdx  docs.json  examples.mdx  spec-version-warning.css  spec-version-warning.js  style.css  tasks-uses-cases.mdx  version-warning.js
scripts/: generate-schemas.ts  render-seps.ts
seps/: 000-action-level-auth.md  0000-Require-Server-requests-to-be-associated-with-Client-requests  0000-Require-Server-requests-to-be-associated-with-Client-requests.md  0000-action-security-metadat-for-tools.md  0000-add-header.md  0000-ai-invocation-audit-context.md  0000-app-rendered-elicitations.md  0000-attested-tool-server-admission.md  0000-auth-declaration-for-remote-servers.md  0000-cache-hint-tool-result.md  0000-clarify-tool-result-content-visibility.md  0000-client-generated-session-id.md  0000-contributor-ladder.md  0000-signature.md  (+187 more)
(+681 files in other folders)
