[package]
name = "mcp-compliance-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-server"
path = "src/bin/test-server.rs"

[[bin]]
name = "test-client"
path = "src/bin/test-client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"